--- a/fastapi_service/requirements.txt
+++ b/fastapi_service/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
+attrs==23.1.0
 certifi==2025.4.26
 click==8.1.8
 colorama==0.4.6
