--- a/fastapi_service/requirements.txt
+++ b/fastapi_service/requirements.txt
@@ -1,7 +1,10 @@
+aiokafka==0.12.0
 alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 asyncpg==0.30.0
+attr==0.3.2
 attrs==23.1.0
 certifi==2025.4.26
 click==8.1.8
@@ -22,6 +25,7 @@ Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==25.0
 psycopg2-binary==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
@@ -29,6 +33,7 @@ Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==6.2.0
 rich==14.0.0
 rich-toolkit==0.14.6
 shellingham==1.5.4
