--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:13.10
+    image: postgres:16.9-alpine
     env_file: .env
     ports:
       - 5432:5432
@@ -10,7 +10,7 @@ services:
       - microservices_network
 
   redis:
-    image: redis:7.0
+    image: redis:7-alpine
     env_file: .env
     ports:
       - 6379:6379
@@ -38,6 +38,7 @@ services:
   fastapi_service:
     build: ./fastapi_service/
     env_file: .env
+    restart: always
     ports:
       - 9000:8000
     depends_on:
