--- a/fastapi_service/Dockerfile
+++ b/fastapi_service/Dockerfile
@@ -1,12 +1,11 @@
-FROM python:3.11
+FROM python:3.11-slim-bullseye
 
 WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt --no-cache-dir
+RUN pip install --upgrade pip && pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"]
