--- a/fastapi_service/Dockerfile
+++ b/fastapi_service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-bullseye
+FROM python:3.12-slim
 
 WORKDIR /app
 
@@ -8,4 +8,4 @@ RUN pip install --upgrade pip && pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn routing.main:app --host 0.0.0.0 --port 8000 --reload"]
