add poetry and pre-commit

--- a/django_service/Dockerfile
+++ b/django_service/Dockerfile
@@ -2,17 +2,15 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-RUN pip install gunicorn==20.1.0
+RUN pip install poetry
 
-COPY requirements.txt .
+COPY pyproject.toml poetry.lock* ./
 
-RUN pip install -r requirements.txt --no-cache-dir
+RUN poetry install
 
 COPY . .
 
-# Скопируйте entrypoint.sh и сделайте его исполняемым
 COPY entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
-# Укажите entrypoint
 ENTRYPOINT ["/app/entrypoint.sh"]
