--- a/django_service/pyproject.toml
+++ b/django_service/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.12"
 asgiref = "3.8.1"
 Django = "3.2.16"
 django-cors-headers = "3.13.0"
