--- a/django_service/requirements.txt
+++ b/django_service/requirements.txt
@@ -8,6 +8,7 @@ inflection==0.5.1
 kafka-python==2.2.11
 packaging==25.0
 psycopg2-binary==2.9.10
+python==3.12.10
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
