--- a/fastapi_service/Dockerfile
+++ b/fastapi_service/Dockerfile
@@ -2,10 +2,15 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+RUN pip install poetry
 
-RUN pip install --upgrade pip && pip install -r requirements.txt --no-cache-dir
+COPY pyproject.toml poetry.lock* ./
+
+RUN poetry install
 
 COPY . .
 
-CMD ["sh", "-c", "alembic upgrade head && uvicorn routing.main:app --host 0.0.0.0 --port 8000 --reload"]
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+ENTRYPOINT ["/app/entrypoint.sh"]
