--- a/django_service/Dockerfile
+++ b/django_service/Dockerfile
@@ -10,7 +10,4 @@ RUN poetry install
 
 COPY . .
 
-COPY entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
-
-ENTRYPOINT ["/app/entrypoint.sh"]
+CMD ["sh", "-c", "poetry run python manage.py makemigrations && poetry run python manage.py migrate && poetry run python manage.py collectstatic --noinput && exec poetry run gunicorn django_service.wsgi --bind 0.0.0.0:8000"]
