--- a/fastapi_service/Dockerfile
+++ b/fastapi_service/Dockerfile
@@ -10,7 +10,5 @@ RUN poetry install
 
 COPY . .
 
-COPY entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
 
-ENTRYPOINT ["/app/entrypoint.sh"]
+CMD ["sh", "-c", "poetry run alembic upgrade head && exec poetry run uvicorn routing.main:app --host 0.0.0.0 --port 8000 --reload"]
